--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
+        <link rel="icon" href="./anh-nha-trang-dep-moi-nhat-1-1544.jpeg" type="image/x-icon" />
+
     <title>Giới thiệu du lịch Nha Trang</title>
 </head>
 <body>
